@@ -159,7 +159,10 @@ class ComplexType(AnyType):
 
             # Check if all children are consumed (parsed)
             if elements:
-                raise XMLParseError("Unexpected element %r" % elements[0].tag)
+                if schema.strict:
+                    raise XMLParseError("Unexpected element %r" % elements[0].tag)
+                else:
+                    init_kwargs['_raw_elements'] = elements
 
         # Parse attributes
         if attributes:
