@@ -261,3 +261,37 @@ def test_complex_any_types():
     </document>
     """)  # noqa
     assert_nodes_equal(result, expected)
+
+
+def test_unparsed_elements():
+    schema = xsd.Schema(load_xml("""
+        <?xml version="1.0"?>
+        <schema xmlns="http://www.w3.org/2001/XMLSchema"
+                xmlns:tns="http://tests.python-zeep.org/"
+                targetNamespace="http://tests.python-zeep.org/"
+                elementFormDefault="qualified">
+          <element name="container">
+            <complexType>
+              <sequence>
+                <element minOccurs="0" maxOccurs="1" name="item" type="string" />
+              </sequence>
+            </complexType>
+          </element>
+        </schema>
+    """))
+    schema.strict = False
+    schema.set_ns_prefix('tns', 'http://tests.python-zeep.org/')
+
+    expected = load_xml("""
+      <document>
+        <ns0:container xmlns:ns0="http://tests.python-zeep.org/">
+          <ns0:item>bar</ns0:item>
+          <ns0:idontbelonghere>bar</ns0:idontbelonghere>
+        </ns0:container>
+      </document>
+    """)
+
+    container_elm = schema.get_element('tns:container')
+    obj = container_elm.parse(expected[0], schema)
+    assert obj.item == 'bar'
+    assert obj._raw_elements
